# Amway-Order-Helper

./: .gitignore  README.md  app_paths.py  build.py  main.py  models.py  order_helper.spec  pyproject.toml  requirements.txt  нужная таблица.xlsx
.github/workflows/: build.yml
data/: order_helper.sqlite3
db/: database.py  repositories.py
services/: excel_exporter.py  excel_template_reader.py  normalizer.py  order_service.py  parser.py  product_summary_exporter.py  settings_service.py
tests/: test_excel_formulas.py  test_normalizer.py  test_parser.py  test_product_summary_exporter.py
ui/: amway.icns  history_tab.py  main_window.py  order_tab.py  partners_tab.py  settings_tab.py
