[project]
name = "order-helper"
version = "0.1.0"
description = "Desktop app for parsing orders and generating payment Excel files"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
build = [
    "pyinstaller>=6.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
